# cmake-external

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  SampleConfig.cmake.in  appveyor.yml
.github/workflows/: amd64_docker_cmake.yml  amd64_linux.yml  amd64_linux_cmake.yml  amd64_macos.yml  amd64_macos_cmake.yml  amd64_windows.yml  amd64_windows_cmake.yml  arm64_docker.yml  arm64_docker_cmake.yml  arm64_macos_cmake.yml  cpp.yml  docker.yml  linux.yml  macos.yml  riscv64_docker.yml  riscv64_docker_cmake.yml  windows.yml
Bar/: CMakeLists.txt
Bar/include/bar/: Bar.hpp
Bar/src/: Bar.cpp
Bar/tests/: CMakeLists.txt  bar_test.cpp
Foo/: CMakeLists.txt
Foo/include/foo/: Foo.hpp
Foo/src/: Foo.cpp
Foo/tests/: CMakeLists.txt  foo_test.cpp
FooApp/: CMakeLists.txt  foo.proto  msg.proto
FooApp/src/: main.cpp
ci/: Makefile  README.md
ci/doc/: docker.dot
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/docs/: docker.dot  generate_image.sh
ci/sample/: CMakeLists.txt  main.cpp
ci/samples/: CMakeLists.txt  main.cpp
ci/vagrant/freebsd/: Vagrantfile
ci/vagrant/netbsd/: Vagrantfile
ci/vagrant/openbsd/: Vagrantfile
cmake/: CMakeExternalConfig.cmake.in  CMakeLists.txt  Cbc.cmake  Dependencies.txt  Makefile  check_deps.cmake  cpp.cmake  gflags.CMakeLists.txt  glog.CMakeLists.txt  host.CMakeLists.txt  host.cmake  protobuf.CMakeLists.txt  system_deps.cmake  zlib.CMakeLists.txt
cmake/dependencies/: CMakeLists.txt
cmake/docker/alpine/: Dockerfile  InstallDockerfile  setup.sh
cmake/docker/ubuntu/: Dockerfile  InstallDockerfile  setup.sh
cmake/sample/: CMakeLists.txt
docker/ubuntu/: Dockerfile  InstallDockerfile  setup.sh
examples/: CMakeLists.txt  example.cpp
patches/: ZLIB-v1.3.1.patch  abseil-cpp-20240116.2.patch  glog.patch  glog_disable_install.patch  protobuf.patch  scip-v921.patch  soplex-v7.1.3.patch  zlib.patch
test/config/: CMakeLists.txt  main.cpp
